kube_development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: fweet-service-ingress
  namespace: development
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-development"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: fweet.dev.joeriberman.nl
      http:
        paths:
          - backend:
              serviceName: fweet-microservice
              servicePort: 80
  tls:
    - secretName: fweet-microservice-tls
      hosts:
        - fweet.dev.joeriberman.nl
status:
  loadBalancer:
    ingress:
      - ip: 5.189.161.42
